knxd (0.13.0-3) unstable; urgency=medium

  * Start master branch
  * Generate and use a config file
  * Refactor linking drivers to the main dispatcher
  * use libfmt
    * require git or cmake if no libfmt3-dev is found
  * Complain if -E / client-addrs= is required but missing
  * Configuration options to not start, or start and ignore failures of, specific interfaces

 -- Matthias Urlichs <matthias@urlichs.de>  Thu, 23 Feb 2017 10:01:37 +0100

knxd (0.12.14-1) unstable; urgency=medium

  * eibread CGI generated syntactically wrong JSON

 -- Matthias Urlichs <matthias@urlichs.de>  Wed, 22 Feb 2017 23:42:27 +0100

knxd (0.12.13-2) unstable; urgency=medium

  * fix C# code generator

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 20 Feb 2017 03:33:26 +0100

knxd (0.12.13-1) unstable; urgency=medium

  * Fix de-allocation of tunnel client address

 -- Matthias Urlichs <matthias@urlichs.de>  Sun, 19 Feb 2017 09:02:08 +0100

knxd (0.12.12-1) unstable; urgency=medium

  * eibread-cgi: reinstate initial read (but not for all addresses)

 -- Matthias Urlichs <matthias@urlichs.de>  Fri, 10 Feb 2017 21:22:47 +0100

knxd (0.12.11-1) unstable; urgency=medium

  * eibread-cgi: old last-update reader: wraparound handled wrongly

 -- Matthias Urlichs <matthias@urlichs.de>  Fri, 10 Feb 2017 02:13:25 +0100

knxd (0.12.10-1) unstable; urgency=medium

  * stupid errors in the ncn5120 driver

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 06 Feb 2017 18:48:17 +0100

knxd (0.12.9-2) unstable; urgency=medium

  * Tell the tracer to use line-buffering on stdout/stderr.

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 06 Feb 2017 13:02:13 +0100

knxd (0.12.9-1) unstable; urgency=medium

  * Clean up tpuart code
  * support tpuart-2
    * including auto-ack mode
  * fix processing of local packets (for the group cache)

 -- Matthias Urlichs <matthias@urlichs.de>  Mon, 06 Feb 2017 00:09:21 +0100

knxd (0.12.8-1) unstable; urgency=medium
